--- a/frontend/front/src/app/Sistema/Usuario/index/index.component.css
+++ b/frontend/front/src/app/Sistema/Usuario/index/index.component.css
@@ -1,3 +1,17 @@
-table {
-  width: 100%;
+
+.contenedor{
+  margin-top: 30px;
+}
+
+.carta{
+  margin: 20px;
+  padding:9px;
+  background-color: white;
+  border: 2px solid;
+  position: relative;
+  float: inline-start;
+}
+img{
+  width: 400px;
+  height: 350px;
 }
